add all of the index.html elements

--- a/index.html
+++ b/index.html
@@ -11,5 +11,209 @@
   </head>
   <body>
 
-  </body>
+		<header id="header">
+			<div class="inner">
+				<a href="#" class="logo">the pizzeria</a>
+				<nav id="nav">
+					<a href="#">About</a>
+					<a href="#">New Order</a>
+				</nav>
+			</div>
+		</header>
+
+		<section id="banner">
+			<div class="inner">
+				<h1>The pizzeria: <span>An oven fired revolution<br />
+				place your order</span></h1>
+				<ul class="actions">
+					<li><a href="#" class="button alt">Get Started</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<section id="one">
+			<div class="inner">
+				<header>
+					<h2>How the revolution began</h2>
+				</header>
+				<p>The Pizzeria Revolution began where all great pizzas beign, Italy. There simple ingredients come together in firey brick ovens to make one of the truly great culinary wonders. It demands greatness. However in a time of Dominos, Pizza Hut, and Papa John's greatness is lacking. The Pizzeria holds the keys to make this happen. Starting with centuries of tradition, the freshest ingredients, wood fired ovens, and the best chefs we bring the all that real pizza has to offer. Now from a small town in Campania to a corner near you the revolution has come to turn mediocrity into flavor!</p>
+				<ul class="actions">
+					<li><a href="#" class="button alt">Learn More</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<section id="two">
+			<div class="inner">
+			</div>
+		</section>
+
+    <section id="menu">
+			<h3>Menu</h3>
+			<div class="table-wrapper">
+				<table>
+					<thead>
+						<tr>
+							<th>Item</th>
+							<th>Description</th>
+							<th>Price</th>
+						</tr>
+					</thead>
+					<tbody>
+            <tr>
+							<td>Small</td>
+							<td>10 inch</td>
+							<td>$7.99</td>
+						</tr>
+            <tr>
+							<td>Medium</td>
+							<td>12 inch</td>
+							<td>$8.99</td>
+						</tr>
+            <tr>
+							<td>Large</td>
+							<td>14 inch</td>
+							<td>$9.99</td>
+						</tr>
+						<tr>
+							<td>Pepperoni</td>
+							<td>House cured</td>
+							<td>$2.99</td>
+						</tr>
+						<tr>
+              <td>Sausage</td>
+							<td>Handmade family recipie</td>
+							<td>$2.99</td>
+						</tr>
+						<tr>
+              <td>Basil</td>
+							<td>Garden fresh</td>
+							<td>$1.99</td>
+						</tr>
+						<tr>
+              <td>Mushrooms</td>
+							<td>Sauted wild Mushrooms</td>
+							<td>$1.99</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+    </section>
+
+		<section id="three">
+			<div class="inner">
+				<article>
+					<div class="content">
+						<header>
+							<h3>Pizza Size</h3>
+						</header>
+						<p>Pick your size first. A small pizza will feed 1 person. Medium will be feed 2-3 and Large 3-4 people.</p>
+            <form>
+              <fieldset class="form-group">
+                <div class="radio">
+                  <label>
+                    <input type="radio" id="small" value="option1">
+                    Small
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" id="medium" value="option2">
+                    Medium
+                  </label>
+                </div>
+                <div class="radio disabled">
+                  <label>
+                    <input type="radio" id="large" value="option3">
+                    Large
+                  </label>
+                </div>
+              </fieldset>
+            </form>
+					</div>
+				</article>
+				<article>
+					<div class="content">
+						<header>
+							<h3>Ingredients</h3>
+						</header>
+						<p>Each pizza comes with a roasted red pepper and tomato sauce and cheese. Additional ingredients below:</p>
+            <form>
+              <fieldset class="form-group">
+                <div class="radio">
+                  <label>
+                    <input type="radio" id="pepperoni" value="option1">
+                    Pepperoni
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" id="sausage" value="option2">
+                    Sausage
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" id="basil" value="option3">
+                    Basil
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" id="mushrooms" value="option3">
+                    Mushrooms
+                  </label>
+                </div>
+              </fieldset>
+            </form>
+					</div>
+				</article>
+				<article>
+				<div class="content">
+						<header>
+							<h3>Quantity</h3>
+						</header>
+						<p>Select how many pizzas would you like. Limit 5 pizzas per online order. Call for larger orders.</p>
+            <div class="form-group">
+              <select class="form-control" id="quantity">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+              </select>
+            </div>
+						<ul class="actions">
+							<li><a href="#" class="button alt">Place Order</a></li>
+						</ul>
+					</div>
+				</article>
+			</div>
+		</section>
+
+		<section id="footer">
+			<div class="inner">
+				<header>
+					<h2>Join the revolution!</h2>
+				</header>
+				<form method="post" action="#">
+					<div class="field half first">
+						<label for="name">Name</label>
+						<input type="text" name="name" id="name" />
+					</div>
+					<div class="field half">
+						<label for="email">Email</label>
+						<input type="text" name="email" id="email" />
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Join" class="alt" /></li>
+					</ul>
+				</form>
+				<div class="copyright">
+					Copyright (c) 2016 Copyright Holder All Rights Reserved.
+				</div>
+			</div>
+		</section>
+
+	</body>
 </html>
