first version backend and ui logic

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<p>Pick your size first. A small pizza will feed 1 person. Medium will be feed 2-3 and Large 3-4 people.</p>
             <form>
               <fieldset class="form-group">
-                <div class="radio">
+                <div id="size" class="radio">
                   <label>
                     <input type="radio" id="small" value="option1">
                     Small
@@ -122,7 +122,7 @@
                     Medium
                   </label>
                 </div>
-                <div class="radio disabled">
+                <div class="radio">
                   <label>
                     <input type="radio" id="large" value="option3">
                     Large
@@ -140,7 +140,7 @@
 						<p>Each pizza comes with a roasted red pepper and tomato sauce and cheese. Additional ingredients below:</p>
             <form>
               <fieldset class="form-group">
-                <div class="radio">
+                <div id="ingredients" class="radio">
                   <label>
                     <input type="radio" id="pepperoni" value="option1">
                     Pepperoni
@@ -169,7 +169,7 @@
 					</div>
 				</article>
 				<article>
-				<div class="content">
+				<div id="quantity" class="content">
 						<header>
 							<h3>Quantity</h3>
 						</header>
