--- a/index.html
+++ b/index.html
@@ -110,23 +110,12 @@
 						<p>Pick your size first. A small pizza will feed 1 person. Medium will be feed 2-3 and Large 3-4 people.</p>
             <form>
               <fieldset class="form-group">
-                <div id="size" class="radio">
-                  <label>
-                    <input type="radio" id="small" value="option1">
-                    Small
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" id="medium" value="option2">
-                    Medium
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" id="large" value="option3">
-                    Large
-                  </label>
+                <div class="form-group">
+                  <select class="form-control" id="size">
+                    <option>Small</option>
+                    <option>Medium</option>
+                    <option>Large</option>
+                  </select>
                 </div>
               </fieldset>
             </form>
@@ -140,29 +129,13 @@
 						<p>Each pizza comes with a roasted red pepper and tomato sauce and cheese. Additional ingredients below:</p>
             <form id ="orderForm">
               <fieldset class="form-group">
-                <div id="ingredients" class="radio">
-                  <label>
-                    <input type="radio" name="pepperoni" value="option1">
-                    Pepperoni
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="sausage" value="option2">
-                    Sausage
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="basil" value="option3">
-                    Basil
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="mushrooms" value="option3">
-                    Mushrooms
-                  </label>
+                <div class="form-group">
+                  <select class="form-control" id="ingredients">
+                    <option>Pepperoni</option>
+                    <option>Sausage</option>
+                    <option>Basil</option>
+                    <option>Mushrooms</option>
+                  </select>
                 </div>
               </fieldset>
             </form>
@@ -184,7 +157,7 @@
               </select>
             </div>
 						<ul class="actions">
-							<li><a href="#" class="button alt">Place Order</a></li>
+              <li><input type="submit" value="Place Order" class="alt" id="order_init"/></li>
 						</ul>
 					</div>
 				</article>
@@ -192,10 +165,13 @@
       <br>
       <article id="order_preview">
         <h3>Please review your order</h3>
-        <p id="selected_size"></p>
-        <p id="selected_ingredients"></p>
-        <p id="selected_qty"></p>
-        <p id="order_total"></p>
+        <p id="selected_size">Size: </p>
+        <p id="selected_ingredients">Topping: </p>
+        <p id="selected_qty">Quntity: </p>
+        <p id="order_total"> Total: $</p>
+        <ul class="actions">
+          <li><a href="#" class="button alt">Order</a></li>
+        </ul>
       </article>
 		</section>
 
