--- a/index.html
+++ b/index.html
@@ -10,27 +10,24 @@
     <title></title>
   </head>
   <body>
-
 		<header id="header">
 			<div class="inner">
-				<a href="#" class="logo">the pizzeria</a>
+				<a href="https://downingforce.github.io/pizzeria/" class="logo">the pizzeria</a>
 				<nav id="nav">
-					<a href="#">About</a>
-					<a href="#">New Order</a>
+					<a href="#one">About</a>
+					<a href="#three">New Order</a>
 				</nav>
 			</div>
 		</header>
-
 		<section id="banner">
 			<div class="inner">
 				<h1>The pizzeria: <span>An oven fired revolution<br />
 				place your order</span></h1>
 				<ul class="actions">
-					<li><a href="#" class="button alt">Get Started</a></li>
+					<li><a href="#three" class="button alt">Get Started</a></li>
 				</ul>
 			</div>
 		</section>
-
 		<section id="one">
 			<div class="inner">
 				<header>
@@ -42,12 +39,10 @@
 				</ul>
 			</div>
 		</section>
-
 		<section id="two">
 			<div class="inner">
 			</div>
 		</section>
-
     <section id="menu">
 			<h3>Menu</h3>
 			<div class="table-wrapper">
@@ -99,7 +94,6 @@
 				</table>
 			</div>
     </section>
-
 		<section id="three">
 			<div class="inner">
 				<article>
@@ -110,23 +104,13 @@
 						<p>Pick your size first. A small pizza will feed 1 person. Medium will be feed 2-3 and Large 3-4 people.</p>
             <form>
               <fieldset class="form-group">
-                <div id="size" class="radio">
-                  <label>
-                    <input type="radio" id="small" value="option1">
-                    Small
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" id="medium" value="option2">
-                    Medium
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" id="large" value="option3">
-                    Large
-                  </label>
+                <div class="form-group">
+                  <select class="form-control" id="size">
+                    <option></option>
+                    <option>Small</option>
+                    <option>Medium</option>
+                    <option>Large</option>
+                  </select>
                 </div>
               </fieldset>
             </form>
@@ -138,31 +122,16 @@
 							<h3>Ingredients</h3>
 						</header>
 						<p>Each pizza comes with a roasted red pepper and tomato sauce and cheese. Additional ingredients below:</p>
-            <form>
+            <form id ="orderForm">
               <fieldset class="form-group">
-                <div id="ingredients" class="radio">
-                  <label>
-                    <input type="radio" id="pepperoni" value="option1">
-                    Pepperoni
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" id="sausage" value="option2">
-                    Sausage
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" id="basil" value="option3">
-                    Basil
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" id="mushrooms" value="option3">
-                    Mushrooms
-                  </label>
+                <div class="form-group">
+                  <select class="form-control" id="ingredients">
+                    <option></option>
+                    <option>Pepperoni</option>
+                    <option>Sausage</option>
+                    <option>Basil</option>
+                    <option>Mushrooms</option>
+                  </select>
                 </div>
               </fieldset>
             </form>
@@ -176,6 +145,7 @@
 						<p>Select how many pizzas would you like. Limit 5 pizzas per online order. Call for larger orders.</p>
             <div class="form-group">
               <select class="form-control" id="quantity">
+                <option></option>
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -184,13 +154,23 @@
               </select>
             </div>
 						<ul class="actions">
-							<li><a href="#" class="button alt">Place Order</a></li>
+              <li><input type="submit" value="Place Order" class="alt" id="order_init"/></li>
 						</ul>
 					</div>
 				</article>
 			</div>
+      <br>
+      <article id="order_preview">
+        <h3>Please review your order</h3>
+        <p id="selected_size">Size: </p>
+        <p id="selected_ingredients">Topping: </p>
+        <p id="selected_qty">Quntity: </p>
+        <p id="order_total"> Total: $</p>
+        <ul class="actions">
+          <li><a href="https://downingforce.github.io/pizzeria/" class="button alt">Order</a></li>
+        </ul>
+      </article>
 		</section>
-
 		<section id="footer">
 			<div class="inner">
 				<header>
@@ -206,7 +186,24 @@
 						<input type="text" name="email" id="email" />
 					</div>
 					<ul class="actions">
-						<li><input type="submit" value="Join" class="alt" /></li>
+						<button id="launch_modal" type="click" class="btn btn-primary" data-toggle="modal" data-target="#order_modal">Join</button>
+            <div class="modal fade" id="order_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  </div>
+                  <div class="modal-body">
+                    <div id="order_display">
+                      <h3 class="modal-title">Thanks for joining The Revolution!</h3>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
 					</ul>
 				</form>
 				<div class="copyright">
@@ -214,6 +211,5 @@
 				</div>
 			</div>
 		</section>
-
 	</body>
 </html>
